[gd_scene load_steps=23 format=3 uid="uid://domi2gxdly8bh"]

[ext_resource type="Texture2D" uid="uid://cc6qgdyn08584" path="res://assets/sprites/snail.png" id="1_pxrc6"]
[ext_resource type="Script" uid="uid://bckqosjdmwowx" path="res://scenes/enemies/caracol/caracol.gd" id="1_qyoku"]
[ext_resource type="Texture2D" uid="uid://cndewr62hnjf5" path="res://assets/sprites/enemy-death.png" id="2_qyoku"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qyoku"]
atlas = ExtResource("1_pxrc6")
region = Rect2(0, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_86evg"]
atlas = ExtResource("1_pxrc6")
region = Rect2(38, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3p8y"]
atlas = ExtResource("1_pxrc6")
region = Rect2(76, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7qwu"]
atlas = ExtResource("1_pxrc6")
region = Rect2(114, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hqia"]
atlas = ExtResource("1_pxrc6")
region = Rect2(152, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nkx7"]
atlas = ExtResource("1_pxrc6")
region = Rect2(190, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ficp8"]
atlas = ExtResource("1_pxrc6")
region = Rect2(228, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6uh3a"]
atlas = ExtResource("1_pxrc6")
region = Rect2(266, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul3tf"]
atlas = ExtResource("1_pxrc6")
region = Rect2(304, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xq7bf"]
atlas = ExtResource("1_pxrc6")
region = Rect2(342, 0, 38, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lb08"]
atlas = ExtResource("2_qyoku")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoyye"]
atlas = ExtResource("2_qyoku")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h4lv"]
atlas = ExtResource("2_qyoku")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv0fn"]
atlas = ExtResource("2_qyoku")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4j8p"]
atlas = ExtResource("2_qyoku")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_g766i"]
atlas = ExtResource("2_qyoku")
region = Rect2(200, 0, 40, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_wpgpl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyoku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86evg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3p8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7qwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hqia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nkx7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ficp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6uh3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul3tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xq7bf")
}],
"loop": true,
"name": &"cara",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lb08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoyye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h4lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv0fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4j8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g766i")
}],
"loop": true,
"name": &"col",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qyoku"]
size = Vector2(4.9999967, 55)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_86evg"]
radius = 21.0
height = 68.0

[node name="Caracol" type="CharacterBody2D"]
collision_mask = 4
script = ExtResource("1_qyoku")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_wpgpl")
animation = &"cara"
autoplay = "cara"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 20.5)
rotation = 1.5707964
shape = SubResource("RectangleShape2D_qyoku")

[node name="WallDetection" type="RayCast2D" parent="."]
target_position = Vector2(-50, 0)
collision_mask = 4

[node name="FloorDetection" type="RayCast2D" parent="."]
position = Vector2(-20, 0)
target_position = Vector2(0, 30)
collision_mask = 4

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(4, 3)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_86evg")

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
